fixed issues with copilot